# htmxnotes

./: .env  .gitignore  Cargo.toml  Makefile  README.md  build.rs
buildutils/: mod.rs  sass.rs  tailwinds.rs
db/: Dockerfile  docker-compose.yml  init.sql
db/initdb/: 00settings.sql  00users.sql  01funcs.sql  01notes.sql  02users.sql  03notes.sql
sass/: auth.sass  base.sass  colors.sass  index.sass
src/: main.rs  schema.rs
src/db/: mod.rs  sessions.rs  users.rs
src/middleware/: auth.rs  mod.rs  nocache.rs
src/routes/: index.rs  mod.rs
src/routes/auth/: login.rs  logout.rs  mod.rs  register.rs
templates/: base.html  index.html
templates/auth/: auth.html  login.html
