[package]
name = "htmxnotes"
version = "0.1.0"
edition = "2021"


[dependencies]
actix-web = "4.5.1"
actix-files = "0.6.5"
askama = "0.12.1"
serde = { version = "1.0.197", features = ["derive"] }

[build-dependencies]
which = "6.0.1"
grass = "0.13.2"
walkdir = "2.5.0"
railwind = "0.1.5"

[tasks]
ban = { script = ["d"] }