[package]
name = "htmxnotes"
version = "0.1.0"
edition = "2021"


[dependencies]
actix-web = "4.5.1"
actix-web-lab = "0.20.2"
actix-htmx = "0.3.0"
actix-files = "0.6.5"
askama = "0.12.1"
dotenv = "0.15.0"
diesel = { version = "2.1.5", features = ["r2d2", "postgres"] }
serde = { version = "1.0.197", features = ["derive"] }
chrono = "0.4.35"
thiserror = "1.0.58"
rand = "0.8.5"
rust-argon2 = "2.1.0"
hex = "0.4.3"
time = "0.3.34"

[build-dependencies]
grass = "0.13.2"
walkdir = "2.5.0"
railwind = "0.1.5"
lazy_static = "1.4.0"